--- a/02-front-basic-github/index.html
+++ b/02-front-basic-github/index.html
@@ -58,7 +58,15 @@
   <div class="btn--danger"></div>
  -->
 
- 
+  <!-- 반복적으로 사용할 버튼 및 input입력창 스타일 미리 만들어두기 -->
+<div class="btn"> basic Button</div>
+<div class="btn btn--primary"> Primary Button</div>
+
+  <div class="btn"> Button 1 </div>
+  <div class="btn"> Button 2 </div>
+  <div class="btn btn--primary"> Button 3 </div>
+  <div class="btn btn--primary"> Button 4 </div>
+
 </div>
 </body>
 </html>
