BEM : css작명규칙 , 버튼, input

--- a/02-front-basic-github/index.html
+++ b/02-front-basic-github/index.html
@@ -46,7 +46,7 @@
 <body>
 <div class="body__container">
 
-  <!-- BEM : css작명규칙 
+  <!-- 1) BEM : css작명규칙 
    a__b : a의 일부분인 b 라는 의미로, 언더바를 두번 사용한다. 
    c--d : c의 상태는 d 라는 의미로, 대쉬를 두번 사용한다.  
 
@@ -58,7 +58,9 @@
   <div class="btn--danger"></div>
  -->
 
-  <!-- 반복적으로 사용할 버튼 및 input입력창 스타일 미리 만들어두기 -->
+  
+ <!-- 2) 반복적으로 사용할 버튼 및 input입력창 스타일 미리 만들어두기 -->
+ <!-- 2-1) 버튼 -->
 <div class="btn"> basic Button</div>
 <div class="btn btn--primary"> Primary Button</div>
 
@@ -67,6 +69,8 @@
   <div class="btn btn--primary"> Button 3 </div>
   <div class="btn btn--primary"> Button 4 </div>
 
+  <!-- 2-2) input 입력창 -->
+  <input type="text" class="input--text" placeholder="Search GitHub">
 </div>
 </body>
 </html>
