미니프로젝트 - 깃허브웹 html cs js로 만들기

--- a/GitHub-Responsive/index.html
+++ b/GitHub-Responsive/index.html
@@ -233,13 +233,13 @@
   function initMap() {
 
     const myLatLng = {
-      lat: 37.782293,
-      lng: -122.391240
+      lat: 37.7822664,
+      lng: -122.3933531
     }
 
     const map = new google.maps.Map(document.getElementById('map'), {
       center: myLatLng,
-      scrollwheel: false,
+      scrollwheel: true,
       zoom: 18
     })
 
@@ -251,6 +251,6 @@
 
   }
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTQIlxBn5AfKGvsfJiormAE1esN3fcCkg&callback=initMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=키값입력(유출주의)&callback=initMap" async defer></script>
 </body>
 </html>
