--- a/04-front-basic-github_header/index.html
+++ b/04-front-basic-github_header/index.html
@@ -71,7 +71,9 @@
 
         <form id="search-form" method="post" action="">
           <input id="search" class="input--text" type="text" placeholder="Search GitHub">
-          <input type="submit">
+          <input type="submit"> <!-- submit 단추 css파일 168번째줄에서 안보이게 설정 : 
+            #search + [type="submit"] { display: none; } 
+          -->
         </form>
 
         <ul class="sub-menu">
@@ -80,7 +82,6 @@
           <li><a href="#">Support</a></li>
         </ul>
       </div>
-
 
     </div>
   </header>
