basic 프론트 프로젝트 - 깃허브만들기

--- a/05-front-basic-github_visual/index.html
+++ b/05-front-basic-github_visual/index.html
@@ -86,6 +86,35 @@
     </div>
   </header>
 
+   <!--VISUAL-->
+   <section class="section section--visual">
+    <div class="inner">
+
+      <!-- visual 좌측 텍스트영역 - flexible 하게 !  -->
+      <div class="summary"> 
+        <div class="summary__title">How&nbsp;people build&nbsp;software</div>
+        <div class="summary__description">Millions of developers use GitHub to build personal projects, support their
+          businesses, and&nbsp;work together on open source technologies.</div>
+      </div>
+
+      <!-- visual 우측 가입form 영역 - fix 하게 ! -->
+      <form id="sign-form" method="post" action="">
+        <ul>
+          <li><input class="input--text" type="text" placeholder="Pick a username"></li>
+          <li><input class="input--text" type="email" placeholder="Your email address"></li>
+          <li>
+            <input class="input--text" type="password" placeholder="Create a password">
+            <p class="caption">Use at least one letter, one numeral, and seven characters.</p>
+          </li>
+          <li>
+            <button class="btn btn--primary" type="submit">Sign up for GitHub</button>
+            <p class="caption">By clicking "Sign up for GitHub", you agree to our terms of service and privacy policy.
+              We'll occasionally send you account related emails.</p>
+          </li>
+        </ul>
+      </form>
+
+
 </div>
 </body>
 </html>
