--- a/06-front-basic-github_feature/index.html
+++ b/06-front-basic-github_feature/index.html
@@ -133,6 +133,36 @@
       </div>
     </div>
 
+    <div class="tiles">
+      <div class="inner">
+
+        <ul class="clearfix">
+          <li>
+            <img src="img/feature-tile__build.png" alt="build">
+            <h3>For everything you build</h3>
+            <p>Host and manage your code on GitHub. You can keep your work private or share it with the world.</p>
+          </li>
+          <li>
+            <img src="img/feature-tile__work.png" alt="work">
+            <h3>A better way to work</h3>
+            <p>From hobbyists to professionals, GitHub helps developers simplify the way they build software.</p>
+          </li>
+          <li>
+            <img src="img/feature-tile__projects.png" alt="projects">
+            <h3>Millions of projects</h3>
+            <p>GitHub is home to millions of open source projects. Try one out or get inspired to create your own.</p>
+          </li>
+          <li>
+            <img src="img/feature-tile__platform.png" alt="platform">
+            <h3>One platform, from start to finish</h3>
+            <p>With hundreds of integrations, GitHub is flexible enough to be at the center of your development
+              process.</p>
+          </li>
+        </ul>
+
+      </div>
+    </div>
+
   </section>
 
 </div>  <!-- body__container 끝-->
