basic 프론트 프로젝트 - 깃허브만들기

--- a/06-front-basic-github_feature/index.html
+++ b/06-front-basic-github_feature/index.html
@@ -165,6 +165,38 @@
 
   </section>
 
+   <!--WHERE IS-->
+   <section class="section section--where-is">
+    <div class="inner">
+
+      <div class="summary">
+        <h2 class="summary__title">Where is GitHub?</h2>
+        <p class="summary__description">GitHub is where people build software. More than 18 million people use GitHub to
+          discover, fork, and contribute to over 48 million projects.</p>
+      </div>
+
+      <div id="map"></div>
+
+    </div>
+  </section>
+
+  <!--PRICING CARD-->
+  <section class="section section--pricing">
+    <div class="inner">
+
+      <div class="card">
+        <div class="cell cell1">
+          <a class="btn btn--primary" href="#">Sign up for GitHub</a>
+        </div>
+        <div class="cell cell2">
+          Public projects are always free. Work together across unlimited private repositories for $7 / month.
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+
 </div>  <!-- body__container 끝-->
 </body>
 </html>
