basic 프론트 프로젝트 - 깃허브만들기

--- a/10-GitHub-Responsive/index.html
+++ b/10-GitHub-Responsive/index.html
@@ -251,6 +251,9 @@
 
   }
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=키값입력(유출주의)&callback=initMap" async defer></script>
+<!-- AIzaSyBQ8BYJYoDVrlufDcUZwxmoe8QXkZOgJW8 -->
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=키값입력(유출주의)&callback=initMap" async defer></script> -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQ8BYJYoDVrlufDcUZwxmoe8QXkZOgJW8&callback=initMap" async defer></script>
+
 </body>
 </html>
