깃허브 반응형웹

--- a/10-GitHub-Responsive/index.html
+++ b/10-GitHub-Responsive/index.html
@@ -39,6 +39,7 @@
 
   <script defer src="js/main.js"></script>
 </head>
+
 <body>
 <div class="body__container">
 
@@ -251,9 +252,9 @@
 
   }
 </script>
-<!-- AIzaSyBQ8BYJYoDVrlufDcUZwxmoe8QXkZOgJW8 -->
+<!--  -->
 <!-- <script src="https://maps.googleapis.com/maps/api/js?key=키값입력(유출주의)&callback=initMap" async defer></script> -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQ8BYJYoDVrlufDcUZwxmoe8QXkZOgJW8&callback=initMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=키값입력(유출주의)&callback=initMap" async defer></script>
 
 </body>
 </html>
