basic 프론트 프로젝트 - 깃허브만들기

--- a/04-front-basic-github-header/index.html
+++ b/04-front-basic-github-header/index.html
@@ -71,9 +71,7 @@
 
         <form id="search-form" method="post" action="">
           <input id="search" class="input--text" type="text" placeholder="Search GitHub">
-          <input type="submit"> <!-- submit 단추 css파일 168번째줄에서 안보이게 설정 : 
-            #search + [type="submit"] { display: none; } 
-          -->
+          <input type="submit">
         </form>
 
         <ul class="sub-menu">
@@ -82,6 +80,7 @@
           <li><a href="#">Support</a></li>
         </ul>
       </div>
+
 
     </div>
   </header>
