--- a/05-front-basic-github-visual/index.html
+++ b/05-front-basic-github-visual/index.html
@@ -44,77 +44,81 @@
 </head>
 
 <body>
-<div class="body__container">
+  <div class="body__container">
 
     <!--HEADER-->
-  <header class="section">
-    <div class="inner clearfix">
+    <header class="section">
+      <div class="inner clearfix">
 
-      <div class="menu-group float--left">
-        <div class="logo">
-          <a href="#">Github</a>
+        <div class="menu-group float--left">
+          <div class="logo">
+            <a href="#">Github</a>
+          </div>
+
+          <ul class="main-menu toggle">
+            <li><a href="#">Personal</a></li>
+            <li><a href="#">Open source</a></li>
+            <li><a href="#">Business</a></li>
+            <li><a href="#">Explore</a></li>
+          </ul>
         </div>
 
-        <ul class="main-menu toggle">
-          <li><a href="#">Personal</a></li>
-          <li><a href="#">Open source</a></li>
-          <li><a href="#">Business</a></li>
-          <li><a href="#">Explore</a></li>
-        </ul>
-      </div>
+        <div class="sign-group float--right ">
+            <div class="btn-group">
+              <a class="btn sign-in" href="#">Sign in</a>
+              <a class="btn btn--primary sign-up" href="#">Sign up</a>
+            </div>
 
-      <div class="sign-group float--right toggle">
-        <div class="btn-group">
-          <a class="btn sign-in" href="#">Sign in</a>
-          <a class="btn btn--primary sign-up" href="#">Sign up</a>
+            <form id="search-form" method="post" action="">
+              <input id="search" class="input--text" type="text" placeholder="Search GitHub">
+              <input type="submit">
+            </form>
+
+            <ul class="sub-menu">
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Support</a></li>
+            </ul>
         </div>
 
-        <form id="search-form" method="post" action="">
-          <input id="search" class="input--text" type="text" placeholder="Search GitHub">
-          <input type="submit"> <!-- submit 단추 css파일 168번째줄에서 안보이게 설정 : 
-            #search + [type="submit"] { display: none; } 
-          -->
-        </form>
+      </div> <!-- header inner 끝! -->
+    </header> <!-- header section 끝! -->
 
-        <ul class="sub-menu">
-          <li><a href="#">Pricing</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Support</a></li>
-        </ul>
-      </div>
+    <!-- VISUAL -->
+    <section class="section section--visual">
+        <div class="inner">
 
-    </div>
-  </header>
+          <!-- visual 좌측 텍스트영역 - flexible 유동적이게!  -->
+          <div class="summary">
+            <div class="summary__title">How&nbsp;people build&nbsp;software</div>
+            <div class="summary__description">Millions of developers use GitHub to build personal projects, support their
+              businesses, and&nbsp;work together on open source technologies.</div>
+          </div>
 
-   <!--VISUAL-->
-   <section class="section section--visual">
-    <div class="inner">
+          <!-- visual 우측 가입form 영역 - fix 고정적이게!  -->
+          <form id="sign-form" method="post" action="">
+            <ul>
+              <li><input class="input--text" type="text" placeholder="Pick a username"> </li>
+              <li><input class="input--text" type="email" placeholder="Your email address"> </li>
+              <li><input class="input--text" type="password" placeholder="Create a password"> 
+                  <p class="caption">Use at least one letter, one normal and seven characters.</p>
+              </li>
 
-      <!-- visual 좌측 텍스트영역 - flexible 하게 !  -->
-      <div class="summary"> 
-        <div class="summary__title">How&nbsp;people build&nbsp;software</div>
-        <div class="summary__description">Millions of developers use GitHub to build personal projects, support their
-          businesses, and&nbsp;work together on open source technologies.</div>
-      </div>
+              <li><button class="btn btn--primary" type="submit"> Sign up for GitHub </button> 
+                  <p class="caption"> By clicking "Sign up for GitHub", you agree to our terms of service and privacy policy.
+                We'll occasionally send you account related emails.
+                  </p>
+              </li>
+            </ul>
 
-      <!-- visual 우측 가입form 영역 - fix 하게 ! -->
-      <form id="sign-form" method="post" action="">
-        <ul>
-          <li><input class="input--text" type="text" placeholder="Pick a username"></li>
-          <li><input class="input--text" type="email" placeholder="Your email address"></li>
-          <li>
-            <input class="input--text" type="password" placeholder="Create a password">
-            <p class="caption">Use at least one letter, one numeral, and seven characters.</p>
-          </li>
-          <li>
-            <button class="btn btn--primary" type="submit">Sign up for GitHub</button>
-            <p class="caption">By clicking "Sign up for GitHub", you agree to our terms of service and privacy policy.
-              We'll occasionally send you account related emails.</p>
-          </li>
-        </ul>
-      </form>
 
+          </form>
+
+        </div>
+      </section>
+      <!-- visual 끝 -->
 
 </div>
+
 </body>
 </html>
