--- a/10-GitHub-Responsive/index.html
+++ b/10-GitHub-Responsive/index.html
@@ -252,9 +252,8 @@
 
   }
 </script>
-<!--  -->
-<!-- <script src="https://maps.googleapis.com/maps/api/js?key=키값입력(유출주의)&callback=initMap" async defer></script> -->
-<script src="https://maps.googleapis.com/maps/api/js?key=키값입력(유출주의)&callback=initMap" async defer></script>
+<!-- 주의 : google map api 개인 key값 넣기. key는 git에 업로드하지 않고 따로 보관할것 -->
+<script src="https://maps.googleapis.com/maps/api/js?key=키값입력(깃업로드하지말고따로보관)&callback=initMap" async defer></script>
 
 </body>
 </html>
