basic 프론트 프로젝트 - 깃허브만들기

--- a/06-front-basic-github-feature-mapApi-pricing/index.html
+++ b/06-front-basic-github-feature-mapApi-pricing/index.html
@@ -194,8 +194,8 @@
       </div>
     </section>
 
-
-  </div>
+  </div> 
+  <!-- container 끝 ! -->
 
   <script> 
       // Initialize and add the map
@@ -215,8 +215,9 @@
         });
       }
   </script>
-<!-- 주의 : google map api 개인 key값 넣기. key는 git에 업로드하지 않고 따로 보관할것 -->
-<script async src="https://maps.googleapis.com/maps/api/js?key=키값입력(깃업로드하지말고따로보관)&callback=initMap" > </script>
+ 
+  <!-- 주의 : google map api 개인 key값 넣기. key는 git에 업로드하지 않고 따로 보관할것 -->
+  <script async src="https://maps.googleapis.com/maps/api/js?key=키값입력(깃업로드하지말고따로보관)&callback=initMap" > </script>
 
 </body>
 </html>
