--- a/07-front-basic-github_toggle/index.html
+++ b/07-front-basic-github_toggle/index.html
@@ -39,17 +39,18 @@
   <!-- 1) 구글폰트 홈피를 사용한 link 와 css 속성 연결후 hello world 를 body안에 넣어 폰트체크-->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet"> 
   <link rel="stylesheet" href="css/main.css"> 
-  <script defer src="js/main.js"> </script>
+
+ <script defer src="js/main.js"></script>
 </head>
 
 <body>
-<div class="body__container">
+  <div class="body__container">
 
-    <!--HEADER-->
-  <header class="section">
-    <div class="inner clearfix">
+      <!--HEADER-->
+    <header class="section">
+      <div class="inner clearfix">
 
-      <div class="menu-group float--left ">
+        <div class="menu-group float--left">
           <div class="logo">
             <a href="#">Github</a>
           </div>
@@ -60,144 +61,165 @@
             <li><a href="#">Business</a></li>
             <li><a href="#">Explore</a></li>
           </ul>
-      </div>
+        </div>
 
-      <div class="sign-group float--right toggle">
-          <div class="btn-group">
-            <a class="btn sign-in" href="#">Sign in</a>
-            <a class="btn btn--primary sign-up" href="#">Sign up</a>
+        <div class="sign-group float--right toggle">
+            <div class="btn-group">
+              <a class="btn sign-in" href="#">Sign in</a>
+              <a class="btn btn--primary sign-up" href="#">Sign up</a>
+            </div>
+
+            <form id="search-form" method="post" action="">
+              <input id="search" class="input--text" type="text" placeholder="Search GitHub">
+              <input type="submit">
+            </form>
+
+            <ul class="sub-menu">
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Support</a></li>
+            </ul>
+        </div>
+
+        <div id="toggle-btn">Header Menu Toggle Button</div>
+
+      </div> <!-- header inner 끝! -->
+    </header> <!-- header section 끝! -->
+
+    <!-- VISUAL -->
+    <section class="section section--visual">
+        <div class="inner">
+
+          <!-- visual 좌측 텍스트영역 - flexible 유동적이게!  -->
+          <div class="summary">
+            <div class="summary__title">How&nbsp;people build&nbsp;software</div>
+            <div class="summary__description">Millions of developers use GitHub to build personal projects, support their
+              businesses, and&nbsp;work together on open source technologies.</div>
           </div>
 
-          <form id="search-form" method="post" action="">
-            <input id="search" class="input--text" type="text" placeholder="Search GitHub">
-            <input type="submit"> <!-- submit 단추 css파일 168번째줄에서 안보이게 설정 : 
-              #search + [type="submit"] { display: none; } 
-            -->
+          <!-- visual 우측 가입form 영역 - fix 고정적이게!  -->
+          <form id="sign-form" method="post" action="">
+            <ul>
+              <li><input class="input--text" type="text" placeholder="Pick a username"> </li>
+              <li><input class="input--text" type="email" placeholder="Your email address"> </li>
+              <li><input class="input--text" type="password" placeholder="Create a password"> 
+                  <p class="caption">Use at least one letter, one normal and seven characters.</p>
+              </li>
+
+              <li><button class="btn btn--primary" type="submit"> Sign up for GitHub </button> 
+                  <p class="caption"> By clicking "Sign up for GitHub", you agree to our terms of service and privacy policy.
+                We'll occasionally send you account related emails.
+                  </p>
+              </li>
+            </ul>
+
+
           </form>
 
-          <ul class="sub-menu ">
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Support</a></li>
-          </ul>
-      </div>
+        </div>
+      </section>
 
-      <div id="toggle-btn">Header Menu Toggle Button</div>
+      <!-- FEATURE -->
+      <section class="section section--feature">
+        <div class="summary">
+          <h2 class="summary__title">Welcome home, developers</h2>
+          <p class="summary__description">GitHub fosters a fast, flexible, and collaborative development process that lets
+            you work on your own or with others</p>
+        </div>
 
-    </div>
-  </header>
+        <div class="video">
+          <div class="video-ratio">
+            <iframe width="520" height="293" src="https://www.youtube.com/embed/afvT1c1ii0c?showinfo=0&rel=0"
+            frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
 
-   <!--VISUAL-->
-   <section class="section section--visual">
-    <div class="inner">
+        <div class="tiles">
+          <div class="inner">
+            <ul class="clearfix">
+              <li>
+                <img src="img/feature-tile__build.png" alt="build" >
+                <h3>For everything you build</h3>
+                <p>Host and manage your code on GitHub. You can keep your work private or share it with the world.</p>
+              </li>
+              <li>
+                <img src="img/feature-tile__work.png" alt="work" >
+                <h3>A better way to work</h3>
+                <p>From hobbyists to professionals, GitHub helps developers simplify the way they build software.</p>
+              </li>
+              <li>
+                <img src="img/feature-tile__projects.png" alt="projects">
+                <h3>Millions of projects</h3>
+                <p>GitHub is home to millions of open source projects. Try one out or get inspired to create your own.</p>
+              </li>
+              <li>
+                <img src="img/feature-tile__platform.png" alt="platform" >
+                <h3>One platform, from start to finish</h3>
+                <p>With hundreds of integrations, GitHub is flexible enough to be at the center of your development
+                process.</p>
+              </li>
+            </ul>
 
-      <!-- visual 좌측 텍스트영역 - flexible 하게 !  -->
-      <div class="summary"> 
-        <div class="summary__title">How&nbsp;people build&nbsp;software</div>
-        <div class="summary__description">Millions of developers use GitHub to build personal projects, support their
-          businesses, and&nbsp;work together on open source technologies.</div>
-      </div>
+          </div>
+        </div>
 
-      <!-- visual 우측 가입form 영역 - fix 하게 ! -->
-      <form id="sign-form" method="post" action="">
-        <ul>
-          <li><input class="input--text" type="text" placeholder="Pick a username"></li>
-          <li><input class="input--text" type="email" placeholder="Your email address"></li>
-          <li>
-            <input class="input--text" type="password" placeholder="Create a password">
-            <p class="caption">Use at least one letter, one numeral, and seven characters.</p>
-          </li>
-          <li>
-            <button class="btn btn--primary" type="submit">Sign up for GitHub</button>
-            <p class="caption">By clicking "Sign up for GitHub", you agree to our terms of service and privacy policy.
-              We'll occasionally send you account related emails.</p>
-          </li>
-        </ul>
-      </form>
+      </section>
 
-    </div>
-  </section>   
-
-  <!--FEATURE-->
-  <section class="section section--feature">
-
-    <div class="summary">
-      <h2 class="summary__title">Welcome home, developers</h2>
-      <p class="summary__description">GitHub fosters a fast, flexible, and collaborative development process that lets
-        you work on your own or with others.</p>
-    </div>
-
-    <div class="video">
-      <div class="video-ratio">
-        <iframe width="520" height="293" src="https://www.youtube.com/embed/afvT1c1ii0c?showinfo=0&rel=0"
-                frameborder="0" allowfullscreen></iframe>
-      </div>
-    </div>
-
-    <div class="tiles">
+  <!-- WEHRE IS  -->
+    <section class="section section--where-is">
       <div class="inner">
 
-        <ul class="clearfix">
-          <li>
-            <img src="img/feature-tile__build.png" alt="build">
-            <h3>For everything you build</h3>
-            <p>Host and manage your code on GitHub. You can keep your work private or share it with the world.</p>
-          </li>
-          <li>
-            <img src="img/feature-tile__work.png" alt="work">
-            <h3>A better way to work</h3>
-            <p>From hobbyists to professionals, GitHub helps developers simplify the way they build software.</p>
-          </li>
-          <li>
-            <img src="img/feature-tile__projects.png" alt="projects">
-            <h3>Millions of projects</h3>
-            <p>GitHub is home to millions of open source projects. Try one out or get inspired to create your own.</p>
-          </li>
-          <li>
-            <img src="img/feature-tile__platform.png" alt="platform">
-            <h3>One platform, from start to finish</h3>
-            <p>With hundreds of integrations, GitHub is flexible enough to be at the center of your development
-              process.</p>
-          </li>
-        </ul>
-
-      </div>
-    </div>
-
-  </section>
-
-   <!--WHERE IS-->
-   <section class="section section--where-is">
-    <div class="inner">
-
-      <div class="summary">
-        <h2 class="summary__title">Where is GitHub?</h2>
-        <p class="summary__description">GitHub is where people build software. More than 18 million people use GitHub to
-          discover, fork, and contribute to over 48 million projects.</p>
-      </div>
-
-      <div id="map"></div>
-
-    </div>
-  </section>
-
-  <!--PRICING CARD-->
-  <section class="section section--pricing">
-    <div class="inner">
-
-      <div class="card">
-        <div class="cell cell1">
-          <a class="btn btn--primary" href="#">Sign up for GitHub</a>
+        <div class="summary">
+          <h2 class="summary__title">Where is GitHub?</h2>
+          <p class="summary__description">GitHub is where people build software. More than 18 million people use GitHub to
+            discover, fork, and contribute to over 48 million projects. </p>
         </div>
-        <div class="cell cell2">
-          Public projects are always free. Work together across unlimited private repositories for $7 / month.
+
+        <div id="map"></div>
+
+
+      </div>
+    </section>
+
+    <!-- PRICING CARD -->
+    <section class="section section--pricing">
+      <div class="inner">
+        <div class="card">
+          <div class="cell cell1">
+            <a class="btn btn--primary" href="#">Sign up for GitHub</a>
+          </div>
+          <div class="cell cell2">
+            Public projects are always free. Work together across unlimited private repositories for $7 / month.
+          </div>
+
         </div>
       </div>
+    </section>
 
-    </div>
-  </section>
+  </div> 
+  <!-- container 끝 ! -->
 
+  <script> 
+      // Initialize and add the map
+      function initMap() {
+        // The location of Uluru
+        const myLatLng = {lat: 37.7822664, lng: -122.3933531 };
+        // The map, centered at Uluru
+        const map = new google.maps.Map(document.getElementById("map"), {
+          zoom: 18,
+          center: myLatLng,
+          scrollwheel: false
+        });
+        // The marker, positioned at Uluru
+        const marker = new google.maps.Marker({
+          position: myLatLng,
+          map: map,
+        });
+      }
+  </script>
+ 
+  <!-- 주의 : google map api 개인 key값 넣기. key는 git에 업로드하지 않고 따로 보관할것 -->
+  <script async src="https://maps.googleapis.com/maps/api/js?key=키값입력(깃업로드하지말고따로보관)&callback=initMap" > </script>
 
-</div>  <!-- body__container 끝-->
 </body>
 </html>
