--- a/10-GitHub-Responsive/index.html
+++ b/10-GitHub-Responsive/index.html
@@ -228,7 +228,8 @@
     </div>
   </footer>
 
-</div>
+</div> <!-- container 끝 ! -->
+
 <script>
   // Initialize Google Map.
   function initMap() {
